--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,19 @@
       "request": "launch",
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome",
+      "url": "http://localhost:5000/Samples/TypeScript/Demo/",
+      "webRoot": "${workspaceFolder}",
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "webpack:///./*": "${workspaceFolder}/Samples/TypeScript/Demo/*",
+        "webpack:///${workspaceFolder}/Framework/*": "${workspaceFolder}/Framework/*",
+      },
+      "trace": true
     }
   ]
 }
